# signal-board

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.prod.yaml  compose.yaml  pyproject.toml  task.md
app/: __init__.py  alerts.py  cli.py  config.py  db.py  debug.py  kakao.py  kakao_notifier.py  kakao_tokens.py  main.py  models.py  naver.py  slack_notifier.py  storage.py  web.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  HARNESS_ENGINEERING.md  ORACLE_DEPLOY.md  PRODUCTION_READINESS.md  QA_MANUAL.md  RUNBOOK.md  TASK_TEMPLATE.md
scripts/: install_windows_task.ps1  run_poll_once.ps1  uninstall_windows_task.ps1
scripts/oracle/: backup_oracle.sh  bootstrap_oracle.sh  deploy_oracle.sh  logs_oracle.sh  ssh_signalboard.example.bat  tunnel_signalboard.example.bat
tests/: test_alerts.py  test_api.py  test_cli_errors.py  test_naver.py  test_slack_notifier.py
