[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-board"
version = "0.1.0"
description = "Saved-search-based real estate alert service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pg8000>=1.31.0,<2.0.0",
    "requests>=2.33.0,<3.0.0",
    "typer>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.95.0,<0.100.0",
    "uvicorn>=0.30.0,<1.0.0",
]
dev = [
    "httpx>=0.24.0,<0.25.0",
    "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
signal-board = "app.cli:app"

[tool.setuptools]
packages = ["app"]
